<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/weatherText"
            android:layout_weight="0.5"
            android:id="@+id/forecast"
            android:gravity="left|right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatureText"
            android:id="@+id/temperature"
            android:layout_weight="0.5"
            android:gravity="center|right"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pressureText"
        android:id="@+id/pressure"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/humidityText"
        android:id="@+id/humidity"
        android:layout_below="@+id/pressure"
        android:layout_centerHorizontal="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/windText"
            android:id="@+id/wind"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/humidity"
            android:maxLines="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wind"
            android:id="@id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txtAvgSpeed"
                android:id="@+id/avgSpeed"
                android:maxLines="1"
                android:gravity="center"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/txtMaxSpeed"
                android:id="@+id/maxSpeed"
                android:maxLines="1"
                android:gravity="center"/>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBackButton"
        android:id="@+id/backButton"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerInParent="true"/>

</RelativeLayout>