<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/trackNameText"
        android:id="@+id/trackName"
        android:maxLines="3"
        android:ellipsize="end"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/trackLengthText"
        android:id="@+id/trackLength"
        android:layout_below="@+id/trackName"
        android:layout_alignParentStart="true"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffff1d16"
            android:layout_margin="3dp"
            android:layout_weight="0.5"
            android:text="@string/trackBackButton"
            android:id="@+id/backTrackButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff109e1a"
            android:layout_weight="0.5"
            android:layout_margin="3dp"
            android:text="@string/trackStartText"
            android:id="@+id/startTrackButton"/>

    </LinearLayout>
</RelativeLayout>